--- a/css/styles.css
+++ b/css/styles.css
@@ -1067,8 +1067,12 @@ header video{
 }
 
 .mobile #main-header{
-  left:30%;
-  top:5%;
+/*  left:30%;
+  top:5%;*/
+
+  margin-left:auto;
+  margin-right:auto;
+  left:0%;
 }
 
 .mobile .quotes{
@@ -1099,9 +1103,24 @@ font-size: 25px;
 .mobile #intro-video{
   width:100%;
   max-height:800px;
-  top:35%;
+  top:50%;
 }
 
 .mobile #header-container{
-  max-height:900px;
+  max-height:1200px;
+
+}
+
+.mobile #main-header h1{
+  font-size: 70px;
+}
+
+.mobile #main-header h2{
+  font-size: 50px;
+  width:100%;
+}
+
+.mobile #main-header h3{
+  font-size: 30px;
+
 }
