--- a/css/styles.css
+++ b/css/styles.css
@@ -463,7 +463,7 @@ p{
 
 
 .photo-large{
-  min-height: 100%;
+  min-width: 100%;
 }
 
 .firstcharacter { 
@@ -1110,7 +1110,7 @@ font-size: 25px;
 .mobile #intro-video-two{
   width:100%;
   max-height:800px;
-  top:55%;
+  top:65%;
 }
 
 .mobile #header-container{
