--- a/css/styles.css
+++ b/css/styles.css
@@ -1103,10 +1103,12 @@ header video{
   font-size: 50px;
   padding-left:30px;
   padding-right:30px;
+  line-height: 1.5em;
 }
 
 .mobile .section_titles{
   font-size: 60px;
+  width:700px;
 }
 
 .mobile .photo-large{
@@ -1141,16 +1143,16 @@ header video{
 }
 
 .mobile #main-header h1{
-  font-size: 70px;
+  font-size: 120px;
 }
 
 .mobile #main-header h2{
-  font-size: 50px;
+  font-size: 55px;
   width:100%;
 }
 
 .mobile #main-header h3{
-  font-size: 30px;
+  font-size: 50px;
 
 }
 
