--- a/css/styles.css
+++ b/css/styles.css
@@ -1282,6 +1282,12 @@ header video{
   padding-left: 0px;
 }
 
+.mobiel .line{
+  stroke:#ccc;
+  stroke-width:2;
+  fill:none;
+}
+
 /*.mobile .mobile-smallChartLabel{
   font-size: 40px;
   font-family: "Roboto",
