fixed margin left bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -1294,9 +1294,9 @@ header video{
   stroke-width:4;
 }
 
-.mobile #skrollr-body{
+/*.mobile #skrollr-body{
  margin-left:70px;
-}
+}*/
 
 
 /*.mobile .mobile-smallChartLabel{
